[16.9] LD Fournisseur + Contrainte Dim Joints
